client/src/pages/investments/Investments.module.css
.Investments {
	display: flex;
	flex: 1;
	flex-direction: column;
	align-items: flex-start;
	width: 100%;
}

.Buttons {
	display: flex;
	padding: 0 0 2vh 0;
}

.PageTitle {
	padding: 4vh 0;
	width: 100%;
}

.Grid {
	width: 100%;
}

.Assets,
.AssetClasses {
	width: 70%;
}

